--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,6 @@
 info:
   name: Eureka server
   contact: Jinku
-  
-management:
-  security:
-    enabled: false
 
 server:
   port: 8761
@@ -15,12 +11,12 @@ eureka:
     instance-id: ${spring.cloud.client.ipAddress}:${server.port}
   client:
     # 是否注册到eurekaserver
-    registerWithEureka: true
+    registerWithEureka: false
     # 是否拉取信息
     fetchRegistry: false
     # eureka server地址
     serviceUrl:
-      defaultZone: http://127.0.0.1:${server.port}/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
   server:
     waitTimeInMsWhenSyncEmpty: 0
     # false 关闭自我保护，剔除心跳检测异常的服务
