--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
   instance:
     hostname: 127.0.0.1
     preferIpAddress: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+    instanceId: ${spring.cloud.client.ip-address}:${server.port}
   client:
     # 是否注册到eurekaserver
     registerWithEureka: false
